@@ -1,3 +1,8 @@
+2005-04-06  Sam Steingold  <sds@gnu.org>
+
+	* modules/clx/new-clx/clx.f (XLIB::%DISPLAY-XID): new function
+	(XLIB:DISPLAY-XID): return it
+
 2005-04-05  Sam Steingold  <sds@gnu.org>
 
 	* case-sensitive.lisp: add CS-COMMON-LISP to *SYSTEM-PACKAGE-LIST*
